fixed overflow

--- a/src/app/pages/Settings/style.less
+++ b/src/app/pages/Settings/style.less
@@ -10,6 +10,8 @@
   transform: translateY(100%);
   transition: transform 0.2s;
   z-index: 1;
+  overflow: auto;
+  box-shadow: inset 0 -1px 4px rgba(0, 0, 0, 0.08);
   &-visible{
     transform: translateY(0);
   }
